tests/snapshots/diagnostic_tests__ui@type_mismatch_call.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n    bar(\"not a number\")\n}\n\nfn bar(value: I32) {}\n"
input_file: tests/inputs/diagnostics/type_mismatch_call.au
---
Error: Type mismatch
   ╭─[ type_mismatch_call:2:9 ]
   │
 2 │     bar("not a number")
   │         ───────┬──────  
   │                ╰──────── Expected `I32`, but got `String`
───╯
